syntax = "proto3";

package yandex.cloud.events.compute;

import "google/rpc/status.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/compute/v1/image.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/compute;compute";
option java_package = "yandex.cloud.api.events.compute";

message CreateImage {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
    CANCELLED = 4;
  }

  message EventDetails {
    // Request + Response
    string image_id = 1 [(required) = true];
    string image_name = 6;

    string family = 7;
    yandex.cloud.compute.v1.Os os = 8;
    repeated string product_ids = 9;

    // Request
    oneof source {
      string source_image_id = 2;
      string source_disk_id = 3;
      string source_snapshot_id = 4;
      string source_uri = 5;
    }
  }
}

message UpdateImage {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }

  message EventDetails {
    // Request + Response
    string image_id = 1 [(required) = true];
    string image_name = 2;

    // Request
    google.protobuf.FieldMask update_mask = 3;
  }
}

message DeleteImage {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];

  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }

  message EventDetails {
    // Request + Response
    string image_id = 1 [(required) = true];
    string image_name = 2;
  }
}
